# pi-agent-extensions

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CREDITS.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  STATUS.md  TASK_LOG.md  TESTING.md  benchmark.py  generate_bench_data.py  justfile  log.md  package-lock.json  package.json  paper_banana_lite.py  pyproject.toml  render_banana_examples.py  run_rlm_benchmark.py
.jules/: sentinel.md
.pi/: pending-questions.json
agentic_vision_poc/: README.md  main.py
auth_fixer/: refresh_tokens.py
bench_data/: junk_100.txt  junk_103.txt  junk_107.txt  junk_108.txt  junk_109.txt  junk_11.txt  junk_110.txt  junk_111.txt  junk_112.txt  junk_113.txt  junk_114.txt  junk_115.txt  junk_116.txt  junk_117.txt  junk_118.txt  junk_119.txt  junk_12.txt  junk_120.txt  junk_121.txt  junk_122.txt  junk_123.txt  junk_124.txt  junk_125.txt  junk_126.txt  junk_127.txt  junk_128.txt  junk_129.txt  junk_13.txt  junk_130.txt  junk_131.txt  junk_132.txt  junk_133.txt  junk_134.txt  junk_135.txt  junk_136.txt  junk_137.txt  junk_138.txt  junk_139.txt  junk_14.txt  junk_140.txt  (+951 more)
docs/: README.md  ask-user.md  extensions.md  handoff.md  handoff_implementation_log.md  manual-testing.md  mitsuhiko-integration-analysis.md  pi-vertex-ai-setup.md  sessions.md  spec_handoff.md
google_search/: google_search.py  pyproject.toml
google_search/src/google_search/: __init__.py
nvidia-benchmarks/: Makefile  README.md
pi-agent-extensions/: README.md  package-lock.json  package.json
projects/gliner2-poc/: AGENTS.md  MODELS.md  README.md  pyproject.toml  requirements.txt
projects/gliner2-poc/scripts/: run_all.sh
projects/gliner2-poc/src/: __init__.py  data_loader.py  gliner2_model.py
projects/gliner2-poc/src/analysis/: __init__.py  metrics.py  visualize.py
projects/gliner2-poc/src/baselines/: __init__.py  deberta_nli.py  fasttext_baseline.py  flair_baseline.py  gliner_v1_baseline.py  modernbert_gliner_baseline.py  modernbert_nli_baseline.py  setfit_baseline.py  spacy_baseline.py
projects/gliner2-poc/src/experiments/: __init__.py  exp01_ner.py  exp02_classification.py  exp03_latency.py  exp04_composition.py
projects/nvidia-benchmarks/: benchmark.py  pyproject.toml  results.md
projects/nvidia-benchmarks/projects/llm-eval/: DATA_DICTIONARY.md
screenshots/: sessions-full-window-preview.txt
scripts/: changelog.mjs  check-release.sh  check_vault_boundary.py  plan_viz.py  publish-release.sh  supermemory_backup.py
(+160 files in other folders)
