[project]
name = "jadoo-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "google_search",
    "source_harvester",
    "projects/pratyaksh-v2",
    "projects/pratyaksh-v3",
    "projects/Multilingual-Doc-Intel",
]
