[project]
name = "google-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jay Shah", email = "jayshah5696@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.62.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
